--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -19,13 +23,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
